# guake-indicator

./: .gitignore  AUTHORS  CNAME  ChangeLog  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  autogen.sh  config.h  config.h.in  configure.ac  guake-indicator.desktop  guake-indicator.xpm  org.guake-indicator.gschema.xml
data/: Makefile.am  Makefile.in  gi_custom_cmd_form.glade  gi_edit_menu_dialog.glade  gi_plugin_dialog.glade  guake-patch.py
data/icons/: Makefile.am  Makefile.in  guake-indicator.xpm
debian/: changelog  control  copyright  guake-indicator.1  install  manpages  menu  missing-sources  rules  watch
man/: Makefile.am  guake-indicator.1
plugins/: Makefile.am  guake-indicator-plugin-manager
src/: Makefile.am  Makefile.in  guake-indicator-ayatana.c  guake-indicator-ayatana.h  guake-indicator-dbus.c  guake-indicator-dbus.h  guake-indicator-delete-entry-group.c  guake-indicator-delete-entry-group.h  guake-indicator-edit-menu.c  guake-indicator-edit-menu.h  guake-indicator-new-entry.c  guake-indicator-new-entry.h  guake-indicator-new-group.c  guake-indicator-new-group.h  guake-indicator-notify.c  guake-indicator-notify.h  guake-indicator-read-json.c  guake-indicator-read-json.h  guake-indicator-read-xml.c  guake-indicator-write-json.c  guake-indicator-write-json.h  guake-indicator-write-xml.c  guake-indicator-xml.h  guake-indicator.c  guake-indicator.h  guake3.h
src/.deps/: guake_indicator-guake-indicator-dbus.Po  guake_indicator-guake-indicator-delete-entry-group.Po  guake_indicator-guake-indicator-new-entry.Po  guake_indicator-guake-indicator-new-group.Po  guake_indicator-guake-indicator-notify.Po  guake_indicator-guake-indicator-read-json.Po  guake_indicator-guake-indicator-read-xml.Po  guake_indicator-guake-indicator-write-json.Po  guake_indicator-guake-indicator-write-xml.Po  guake_indicator-guake-indicator.Po
