AC_INIT([guake-indicator], [1.4.5], [gun101@email.it])

AM_INIT_AUTOMAKE([-Wall -Werror])

# safety check , make sure that config is not run from outer space
AC_CONFIG_SRCDIR([src])
AC_CONFIG_MACRO_DIR([m4])

AM_MAINTAINER_MODE([enable])

m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

# Checks for programs.
AC_PROG_CC
AM_PROG_CC_C_O
AC_STDC_HEADERS

# Checks for libraries.
AC_CHECK_FUNCS([bzero]) 
AC_CHECK_FUNCS([mkdir]) 
AC_CHECK_FUNCS([strdup])
AC_CHECK_FUNCS([strerror])

PKG_PROG_PKG_CONFIG

GLIB_REQUIRED=2.50.0
GTK_REQUIRED=3.22.0
APPINDICATOR_REQUIRED=0.0.13

# Glib
PKG_CHECK_MODULES(GLIB, glib-2.0 >= $GLIB_REQUIRED gio-2.0 >= $GLIB_REQUIRED)

# Gtk-3
PKG_CHECK_MODULES(GTK, gtk+-3.0 >= $GTK_REQUIRED)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

# Ayatana Application Indicator
AYATANA_APPINDICATOR_PKG=ayatana-appindicator3-0.1
PKG_CHECK_MODULES(AYATANA_APPINDICATOR, $AYATANA_APPINDICATOR_PKG >= $APPINDICATOR_REQUIRED)
AC_SUBST(AYATANA_APPINDICATOR_CFLAGS)
AC_SUBST(AYATANA_APPINDICATOR_LIBS)

# libjson-c
PKG_CHECK_MODULES(JSONC, json-c)
AC_SUBST(JSONC_CFLAGS)
AC_SUBST(JSONC_LIBS)

# libxml-2.0
PKG_CHECK_MODULES(XML2, libxml-2.0)
AC_SUBST(XML2_CFLAGS)
AC_SUBST(XML2_LIBS)

# Dbus-Glib
PKG_CHECK_MODULES(DBUSGLIB, dbus-glib-1)
AC_SUBST(DBUSGLIB_CFLAGS)
AC_SUBST(DBUSGLIB_LIBS)

# needed to install gsettings schema
GLIB_GSETTINGS

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
Makefile
src/Makefile
data/Makefile
data/icons/Makefile
man/Makefile
])

AC_OUTPUT
